# acceleratedrehabtherapy

./: .gitignore  README.md  pyproject.toml
OLD ART website code/: .gitignore  Dockerfile  README.md  app.yaml  docker-compose.yml  nginx.example.conf  requirements.txt  run.sh
OLD ART website code/requirements/: common.txt
OLD ART website code/src/: manage.py
OLD ART website code/src/apps/about/: admin.py  models.py  urls.py  views.py
OLD ART website code/src/apps/base_page/: __init__.py  admin.py  apps.py  models.py  views.py
OLD ART website code/src/apps/blocks/: admin.py  models.py  views.py
OLD ART website code/src/apps/blog/: admin.py  models.py  urls.py  views.py
OLD ART website code/src/apps/contacts/: admin.py  forms.py  models.py  urls.py  views.py
OLD ART website code/src/apps/main/: admin.py  models.py  urls.py  views.py
OLD ART website code/src/apps/services/: admin.py  urls.py  (+2 more)
OLD ART website code/src/project/: sitemaps.py  utils.py
OLD ART website code/src/settings/: _pipeline.py  common.py  dev_common.py  pipeline.py  prod_common.py  production.py
OLD ART website code/src/templates/: 400.html  403.html  404.html  500.html  layout.html  sitemap.xml
OLD ART website code/src/urls/: common.py  dev_common.py  production.py
OLD ART website code/venv_new/: pip-selfcheck.json  pyvenv.cfg
OLD ART website code/venv_new/Scripts/: Activate.ps1  activate  activate.bat  django-admin.py
acceleratedrehabtherapy/: settings.py
acceleratedrehabtherapy/templates/: base.html
acceleratedrehabtherapy/templates/includes/: footer.html  header.html
(+339 files in other folders)
